<resources>
    <string name="app_name">Pantree</string>
    <string name="action_settings">Settings</string>
    <string name="default_title">Title</string>
    <string name="default_body">Body</string>
    <string name="default_desc">Faded</string>

    <string name="action_select_category">Category</string>
    <string name="action_show_list">Test: Show List</string>

    <string name="parse_app_id">mE1RpPA2zD90drr2MIKz47aproJX4EKlH7rBy5gq</string>
    <string name="parse_client_key">zUPOHCccmree3fSoTKeKvzzOJCCrOyxbvo8yY0OF</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_categories">Categories</string>
    <string name="navigation_drawer_expiring">Expiring Soon</string>
    <string name="navigation_drawer_login">Login</string>
    <string name="navigation_drawer_signout">Sign Out</string>
    <string name="navigation_drawer_about">About</string>
    <string name="navigation_drawer_default_name">Local User</string>
    <string name="navigation_drawer_default_email">Please login or sign up</string>
    <string name="navigation_drawer_find_recipes">Find Recipes</string>

    <string name="entry_food_name">Enter your food</string>
    <string name="entry_food_quantity">Enter a quantity</string>
    <string name="entry_selectable_category">Select a category</string>
    <string name="entry_selectable_thumbnail">Select your thumbnail</string>
    <string name="entry_expiration_date">Expiration date</string>
    <string name="entry_selectable_date">MM/DD/YY</string>

    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="extra">Extra info</string>


    <string name="entryPopUp">Input a food item</string>\
    <string name="foodEntry">Enter a food item</string>
    <string name="categorySelect">Please select a category</string>
    <string name="expirationEntry">Set expiration date</string>
    <string name="hintFoodEntry"> e.g Milk, Honey, Lasagna</string>
    <string name="submitEntry">Submit item</string>
    <string name="cancelEntry">Cancel entry</string>
    <string name="expirationEntryDate">MM/DD/YY</string>
    <string name="quantityText">Enter quantity</string>
    <string name="enterHereText">Enter Here</string>
    <string name="takePicture">Tap to add a photo</string>
    <string name="about_popup_title">About Project FE</string>
    <string name="about_popup_content">
        General Development:\n
        Phuong Nguyen\n
        David Zech\n
        \n
        Backend Development:\n
        Brian Kim\n
        Kevin Wong\n
        \n
        UI Development:\n
        Jimmy Gong\n
        Theano Georgoulakis
    </string>

    <string name="new_item_fail">Failed to save item</string>
    <string name="new_item_success">Successfully saved item</string>
    <string name="edit_item_deleted">Successfully deleted item</string>
    <string name="item_delete">Delete Item</string>
    <string name="item_delete_confirmation">Are you sure?</string>
    <string name="item_delete_content">You cannot undo this.</string>

    <string name="nothing_here">Nothing Here</string>

    <string-array name="category_array">
        <item>Meat</item>
        <item>Poultry</item>
        <item>Fish</item>
        <item>Fruit</item>
        <item>Vegetables</item>
        <item>Herbs/Spices</item>
        <item>Grains/Carbs</item>
        <item>Dairy</item>
        <item>Condiments</item>
        <item>Alcohol</item>
        <item>Misc</item>
    </string-array>

    <string name="expired_date">Expired</string>
    <string name="search_hint">Search For Available Food</string>string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_entry">entryActivity</string>
    <string name="title_activity_camera">CameraActivity</string>

</resources>

