<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:style="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.fe.entryActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/foodEntry"
        android:id="@+id/itemTextView"
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="20"
        android:height="48dp"
        android:gravity="center_horizontal"
        android:id="@+id/itemEditText"
        android:hint="@string/hintFoodEntry"
        android:theme="@style/itemEditText"
        android:inputType="textCapSentences"
        android:layout_marginBottom="16dp"
        android:layout_below="@+id/itemTextView"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/quantityText"
        android:id="@+id/quantityTextView"
        android:layout_alignTop="@+id/expirationTextView"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="5"
        android:height="48dp"
        android:layout_marginLeft="16dp"
        android:gravity="center_horizontal"
        android:hint="@string/enterHereText"
        android:id="@+id/quantityAmtEditText"
        android:layout_below="@+id/quantityTextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expirationEntry"
        android:id="@+id/expirationTextView"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="16dp"
        android:layout_below="@+id/itemEditText"
        android:layout_alignEnd="@+id/itemEditText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expirationEntryDate"
        android:id="@+id/expirationDateTextView"
        android:height="48dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/expirationTextView"
        android:layout_alignStart="@+id/expirationTextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categorySelect"
        android:id="@+id/categoryTextView"
        android:layout_below="@+id/expirationDateTextView"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/categoryTextView"
        android:minWidth="400dp"
        android:id="@+id/categorySpinner"
        android:spinnerMode="dropdown"
        android:minHeight="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:entries="@array/category_array"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submitEntry"
        android:id="@+id/sbtBtn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:theme="@style/MyButton"
        android:minWidth="88dp"
        android:height="36dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancelEntry"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:theme="@style/MyButton"
        android:id="@+id/cancelBtn"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/sbtBtn" />


</RelativeLayout>
