<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/item_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="32dp"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/item_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/entry_food_name"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/item_quantity_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="12dp"
            android:layout_marginEnd="12dp"
            android:layout_weight="1">

            <EditText
                android:id="@+id/item_quantity_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/quantityText"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>


    </LinearLayout>


    <android.support.v7.widget.AppCompatButton
        android:layout_marginTop="36dp"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="?attr/selectableItemBackground"
        android:text="select a category"
        android:textColor="@color/blue_400" />



    <LinearLayout
        android:layout_marginTop="36dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1" >

            <android.support.v7.widget.AppCompatImageButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:padding="32dp"
                android:layout_weight="0.5"
                android:src="@drawable/ic_date_range_white_36dp"
                android:tint="@color/blue_400" />

            <LinearLayout
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:weightSum="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="Expiration Date" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:text="@string/expirationEntryDate" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatImageButton
                android:layout_marginTop="16dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:padding="32dp"
                android:layout_weight="0.5"
                android:src="@drawable/ic_photo_camera_white_36dp"
                android:tint="@color/blue_400" />

            <!-- this particular LinearLayout is used to center the text -->
            <LinearLayout
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:weightSum="2" >

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Select your thumbnail" />

            </LinearLayout>


        </LinearLayout>



    </LinearLayout>


</LinearLayout>